# rust-sandbox

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: pre-commit.yaml
christmastree/: Cargo.toml
christmastree/src/: main.rs
fizzbuzz/: Cargo.toml
fizzbuzz/src/: main.rs
nstep/: Cargo.toml
nstep/src/: main.rs
