[package]
name = "christmastree"
version = "0.1.0"
authors = ["Andreas Baulig <free.geronimo@hotmail.de>"]
description = "Prints a pretty christmas tree. Merry christmas!"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.*"
